Fix footer alignment on iPad

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ body {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     footer > .container {
         text-align: center;
     }
